--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ timezone:
 
 title: Sjoerd Teunisse Blog # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Sjoerd Teunisse Blog # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Sjoerd Teunisse Blog - Technology and Travel.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -34,8 +34,8 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Sjoerd Teunisse
+  email: a@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username # change to your Twitter homepage
