--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: Sjoerd Teunisse Blog # the main title
 
-tagline: Sjoerd Teunisse Blog # it will display as the subtitle
+tagline: Technology - A.I, DataScience, Research and Travel # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   Sjoerd Teunisse Blog - Technology and Travel.
