--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Sjoerd Teunisse Blog # the main title
+title: Sjoerd Teunisse # the main title
 
 tagline: Technology - A.I, DataScience, Research and Travel # it will display as the subtitle
 
